--- a/index.html
+++ b/index.html
@@ -3,10 +3,182 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700|PT+Sans:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
+    <header class="main-header">
+      <div class="container">
+        <nav class="main-navigation">
+          <ul class="site-navigation">
+            <li><a href="info.html">Информация</a></li>
+            <li><a href="foto-and-video.html">Фото и видео</a></li>
+            <li><a href="logo.html">Лого</a></li>
+            <li><a href="map.html">Карта штата</a></li>
+            <li><a href="hotels.html">Гостиницы</a></li>
+          </ul>
+        </nav>
+        <a class="main-header-logo">
+          <img src="img/nav-logo.png" width="140" height="72" alt="Седона">
+        </a>
+      </div>
+    </header>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+    <main class="container">
+        <section class="index-big-image">
+          <h1 class="visually-hidden">Седона</h1>
+          <div class="index-big-image-above">
+          </div>
+          <!--будущая маска -->
+        </section>
+        <section class="index-about-sedona" aria-label="О Седоне">
+          <b>
+            Седона - небольшой городок в Аризоне, заслуживающий большего!
+          </b>
+          <p>
+            Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!
+          </p>
+        </section>
+
+        <section class="sedona-advantages">
+          <h2 class="visually-hidden">Преимущества Седоны</h2>
+          <div class="sedona-advantages-line-1">
+            <div class="sedona-advantages-item blue">
+              <b>Настоящий городок</b>
+              <span>№1</span>
+              <p>
+                Седона - не аттракцион для туристов, там течет своя жизнь
+              </p>
+            </div>
+            <div class="sedona-advantages-line-image">
+              <img src="img/index-photo-1.jpg" width="800" height="255" alt="Город Седона-настоящий городок">
+            </div>
+          </div>
+
+          <ul class="sedona-advantages-line-2">
+            <li class="sedona-advantages-item another">
+              <b>Жилье</b>
+              <p>
+                Рекомендуем пожить в натоящем мотеле, все как в кино!
+              </p>
+            </li>
+            <li class="sedona-advantages-item another">
+              <b>Еда</b>
+              <p>
+                Всегда заказывайте фирменный бургер, вы не разочаруетесь!
+              </p>
+            </li>
+            <li class="sedona-advantages-item another">
+              <b>Сувениры</b>
+              <p>
+                Не только китайского, но и местного производства!
+              </p>
+            </li>
+          </ul>
+
+          <div class="sedona-advantages-line-3">
+            <div class="sedona-advantages-line-image">
+              <img src="img/index-photo-2.jpg" width="800" height="255" alt="Мост Дьявола">
+            </div>
+            <div class="sedona-advantages-item blue">
+              <b>Там есть мост дьявола</b>
+              <span>№2</span>
+              <p>
+                Да, по нему можно пройти! Если конечно вы осмелитесь
+              </p>
+            </div>
+          </div>
+
+          <ul class="sedona-advantages-line-4">
+            <li class="sedona-advantages-item grey">
+              <b>Небольшая площадь</b>
+              <span>№3</span>
+              <p>
+                Все достопримечательности находятся очень близко
+              </p>
+            </li>
+            <li class="sedona-advantages-item grey">
+              <b>Красивая дорога</b>
+              <span>№4</span>
+              <p>
+                Ехать в Седону из Лас-Вегаса совсем не скучно!
+              </p>
+            </li>
+            <li class="sedona-advantages-item grey">
+              <b>Мало туристов</b>
+              <span>№5</span>
+              <p>
+                Большинство едет в Гранд Каньон и толпится там
+              </p>
+            </li>
+          </ul>
+        </section>
+
+        <section class="index-form">
+          <h4 class="visually-hidden">Форма поиска гостиниц</h4>
+          <b>Заинтересовались?</b>
+          <p>
+            Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Селоне
+          </p>
+          <span>Поиск гостиницы в Седоне</span>
+          <!-- форма -->
+          <form class="sedona-form" action="/sedona" method="get">
+            <fieldset>
+              <p class="sedona-form-item">
+                <label for="sedona-form-item-date-arrival">Дата заезда:</label>
+                <input id="sedona-form-item-date-arrival" type="text" name="date-arrival" value="" placeholder="24 апреля 2017">
+              </p>
+              <p class="sedona-form-item">
+                <label for="sedona-form-item-date-departure">Дата выезда:</label>
+                <input id="sedona-form-item-date-departure" type="text" name="date-departure" value="" placeholder="4 июля 2017">
+              </p>
+              <p class="sedona-form-item">
+                <label for="sedona-form-item-adults">Взрослые:</label>
+                <input id="sedona-form-item-adults" type="number" name="adults" value="" placeholder="2">
+              </p>
+              <p class="sedona-form-item">
+                <label for="sedona-form-item-kids">Дети:</label>
+                <input id="sedona-form-item-kids" type="number" name="kids" value="" placeholder="0">
+              </p>
+              <button class="button" type="submit">Найти</button>
+            </fieldset>
+          </form>
+        </section>
+
+        <section class="index-map">
+          <h4 class="visually-hidden">Карта Седоны</h4>
+          <img src="img/index-map.jpg" width="1200" height="473" alt="Карта Седоны">
+        </section>
+    </main>
+
+    <footer class="main-footer">
+      <div class="container">
+        <div class="footer-hashtag">
+          <span>#visitsedona</span>
+        </div>
+        <div class="footer-social">
+          <ul>
+            <li>
+              <a class="footer-social-button" href="#" aria-label="В контакте">Вконтакте</a>
+            </li>
+            <li>
+              <a class="footer-social-button" href="#" aria-label="Фейсбук">Фейсбук</a>
+            </li>
+            <li>
+              <a class="footer-social-button" href="#" aria-label="Ютуб">Ютуб</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-logo">
+          <span>website by</span>
+          <a class="button" href="https://htmlacademy.ru">
+            <!-- добавить svg -->
+             <svg> width="115" height="41" alt="Логотип HTML ACADEMY"></svg>
+          </a>
+        </div>
+      </div>
+    </footer>
 
   </body>
 </html>
